--- a/Movie-store/Views/_ViewImports.cshtml
+++ b/Movie-store/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Movie_store
 @using Movie_store.Models
 @using System.Collections.Generic
+@using Movie_store.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
