--- a/Movie-Store-FE/Views/_ViewImports.cshtml
+++ b/Movie-Store-FE/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using Movie_Store_FE
-@using Movie_Store_Data.Models; 
+@using Movie_Store_FE.ViewModels 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
